fix : fix auth screen overflow

--- a/src/pages/auth/style.module.css
+++ b/src/pages/auth/style.module.css
@@ -14,6 +14,8 @@
   align-items: center;
   padding: 0 50px 0 0;
   box-sizing: border-box;
+  overflow-y: scroll;
+  
 }
 
 .quote__container {
@@ -32,6 +34,8 @@ p {
 .form__side {
   width: 55%;
   height: 100%;
+  overflow-y: scroll;
+
 }
 
 @media screen and (max-width: 1500px) {
